[gd_scene load_steps=4 format=3 uid="uid://bvjo3oey6s8ha"]

[ext_resource type="Texture2D" uid="uid://da2og3im12tgj" path="res://images/UI_IconsWhiteIndividual_g708.png" id="1_lyrcj"]
[ext_resource type="Script" uid="uid://4v36wnv0fb3h" path="res://scripts/play_pause_button.gd" id="2_uvnpd"]
[ext_resource type="Texture2D" uid="uid://bn5w1ma1ylinm" path="res://images/UI_IconsWhiteIndividual_g700.png" id="3_gsc20"]

[node name="MenuBar" type="VBoxContainer"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -102.5
offset_right = 102.5
offset_bottom = 206.0
grow_horizontal = 2

[node name="PlayPauseButton" type="TextureButton" parent="."]
layout_mode = 2
texture_normal = ExtResource("1_lyrcj")
script = ExtResource("2_uvnpd")
texture_play = ExtResource("1_lyrcj")
texture_pause = ExtResource("3_gsc20")

[connection signal="pause" from="PlayPauseButton" to="PlayPauseButton" method="_on_pause"]
[connection signal="play" from="PlayPauseButton" to="PlayPauseButton" method="_on_play"]
[connection signal="pressed" from="PlayPauseButton" to="PlayPauseButton" method="_on_pressed"]
